--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
+nom = "7"
 
 [lib]
 crate-type = ["cdylib"]
