--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,5 @@
 [target.wasm32-unknown-unknown]
 rustflags = ["-C", "link-args=-z stack-size=15000000"]
+
+[target.wasm32-wasip1]
+rustflags = ["-C", "link-args=-z stack-size=15000000"]
