--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "type": "module",
+  "scripts": {
+    "build-repl": "./scripts/transpile"
+  },
   "dependencies": {
     "@bytecodealliance/preview2-shim": "^0.17.2"
   }
